# onedrive-exif-fixer

./: README.md  cli.py  config.json  config.py  date_parsing.py  dry-run-report.csv  exiftool_service.py  processor.py  pyproject.toml  reporting.py
.github/: copilot-instructions.md
onedrive_exif_fixer/: __init__.py  cli.py  config.py  date_parsing.py  exiftool_service.py  processor.py  reporting.py
tests/: test_date_parsing.py  test_processor.py
