[project]
name = "onedrive-exif-fixer"
version = "0.1.0"
description = "Fix or create EXIF taken dates for OneDrive uploads."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
onedrive-exif-fixer = "onedrive_exif_fixer.cli:main"

[project.optional-dependencies]
dev = ["pydebug>=1.0.3", "pylint>=4.0.2", "pytest>=9.0.0"]

[tool.pylint]
init-hook = "import sys; sys.path.insert(0, \".\")"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=prepend"]

[tool.uv]
package = true
